Project/Code/Executor/Requests_To_Execute/Hello_World4/log_file.txt
  File "C:\Github\Repositories\CodeDup\CodeDup\Project\Code\Executor\Requests_To_Execute\Hello_World4\Hello_World.py", line 76
    print "I am going to random weather I will raise an exception or not.. (33 %)"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
